cloud-1959 update errorDto to remove httpStatus enums from openAPI spec
