# source/Sopheon.CloudNative.Environments/Sopheon.CloudNative.Environments.Functions/Helpers/HttpResponseDataBuilder.cs
@@ -24,7 +24,7 @@ namespace Sopheon.CloudNative.Environments.Functions.Helpers
 
          // Cloud-1487, need to provide instance of Azure.Core.Serialization.ObjectSerializer
          // host config in Program.cs main() doesn't run in unit test context, so doesn't provide an ObjectSerializer
-         await createdResponse.WriteAsJsonAsync(error, new JsonObjectSerializer(), error.StatusCode);
+         await createdResponse.WriteAsJsonAsync(error, new JsonObjectSerializer(), (HttpStatusCode)error.HttpStatusCode);
          return createdResponse;
       }
 
